Style has been updated

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,7 +15,7 @@ en:
     3: IRC
     4: About us
   head:
-    text: Hackerspace
+    text: About us
     p:
       1: We are a group of people with an interest in electronics and computing, who meet to share and work on our ideas. If you share this interest, you are welcome to come along, and see what we do! You do not need to be skilled in technical matters - we have people attend whose skills range from textile art to designers of computer circuit boards.
       2: You can also sign up to our mailing list to find out what we do.
