Menu has been changed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,8 +12,8 @@ en:
     0: Main
     1: Wiki
     2: Mail list
-    3: IRC
-    4: About us
+    3: About us
+    4: Contacts
   head:
     text: Hackerspace
     p:
