Vendor setting has been implemented

--- a/config/locales/be.yml
+++ b/config/locales/be.yml
@@ -3,6 +3,7 @@ be:
   title: Сардэчна запрашаем на сайт хакерспэйса ў Мінску
   description: Сайт хакерспэйса ў Мінску
   keywords: хакерспэйс мінск беларусь
+  vendor: Хакерспэйс супольнасць у Мінску
   logo:
     text:
       1: Хакерспэйс
