--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,7 @@ en:
   title: Welcome to hackerspace in Minsk
   description: Site of hackerspace in Minsk
   keywords: hackerspace minsk belarus
+  vendor: Hackerspace community in Minsk
   logo:
     text:
       1: Hackerspace
