--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -3,6 +3,7 @@ ru:
   title: Добро пожаловать на сайт хакерспэйса в Минске
   description: Сайт хакерспэйса в Минске
   keywords: хакерспэйс минск беларусь
+  vendor: Хакерспэйс сообщество в Минске
   logo:
     text:
       1: Хакерспэйс
